modified:   Pipfile 	modified:   Pipfile.lock 	new file:   Tool_Calling.py

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ openai = "*"
 black = "*"
 python-dotenv = "*"
 langchain-openai = "*"
+langchain-anthropic = "*"
+langchain-community = "*"
 
 [dev-packages]
 
